# 42neurons

./: .gitignore  42neurons.hpp  CMakeLists.txt  Makefile  Neuron.cpp  Neuron.hpp  NeuronDeep.hpp  NeuronDifficult.cpp  NeuronDifficult.hpp  NeuronException.cpp  NeuronException.hpp  NeuronFunctions.cpp  NeuronFunctions.hpp  NeuronIn.hpp  NeuronInput.cpp  NeuronInput.hpp  NeuronNetwork.cpp  NeuronNetwork.hpp  NeuronOut.cpp  NeuronOut.hpp  NeuronOutput.cpp  NeuronOutput.hpp  NeuronSimple.cpp  NeuronSimple.hpp  PythonBindings.cpp  README.md  author  main.cpp  pythonBuild.sh  setup.py  simpleExample.py
base/: NeuronBase.hpp  NeuronFunctions.cpp  NeuronFunctions.hpp
connection/: NeuronConnection.cpp  NeuronConnection.hpp
doc/: Doxyfile
doc/html/: 42neurons_8hpp_source.html  _neuron_base_8hpp_source.html  _neuron_connection_8hpp_source.html  _neuron_deep_8hpp_source.html  _neuron_exception_8hpp_source.html  _neuron_functions_8hpp_source.html  _neuron_in_8hpp_source.html  files.html  (+39 more)
include/: NeuronConnection.hpp  NeuronDeep.hpp  NeuronFunctions.hpp  NeuronNetwork.hpp  NeuronOut.hpp  NeuronSimple.hpp
interfaces/: NeuronSimple.cpp  NeuronSimple.hpp
network/: NeuronNetwork.cpp  NeuronNetwork.hpp
neurons/: NeuronDeep.cpp  NeuronDeep.hpp  NeuronIn.cpp  NeuronIn.hpp  NeuronOut.cpp  NeuronOut.hpp
pythonBindings/: CMakeLists.txt  PythonBindings.cpp  pythonBuild.sh  setup.py
pythonBindings/examples/gui/: Assembly.py  Contract.py  DrawNN.py  input.txt  main.py  output.txt  requirements.txt
src/: NeuronConnection.cpp  NeuronFunctions.cpp  NeuronIn.cpp  NeuronNetwork.cpp
(+61 files in other folders)
